--- a/app/components/Auction/CreatedAuction/createdAuctionView.html
+++ b/app/components/Auction/CreatedAuction/createdAuctionView.html
@@ -16,6 +16,7 @@
                 <div class="auction-item" ng-repeat="item in AuctionList">
                     <detail-auction auction-item="{item}"></detail-auction>
                 </div>
+                <paging item-count="AuctionList.length"></paging>
             </div>
         </div>
     </div>
