--- a/app/components/Shipments/finished/finishedShipmentsView.html
+++ b/app/components/Shipments/finished/finishedShipmentsView.html
@@ -14,6 +14,7 @@
                 <div class="auction-item" ng-repeat="item in finishedShipments">
                     <detail-shipment shipment-item="{item}"></detail-shipment>
                 </div>
+                <paging item-count="finishedShipments.length"></paging>
             </div>
         </div>
     </div>
