--- a/app/components/Shipments/new/newShipmentsView.html
+++ b/app/components/Shipments/new/newShipmentsView.html
@@ -14,6 +14,7 @@
                 <div class="auction-item" ng-repeat="item in newShipments">
                     <detail-shipment shipment-item="{item}"></detail-shipment>
                 </div>
+                <paging item-count="newShipments.length"></paging>
             </div>
         </div>
     </div>
