--- a/app/components/Shipments/inProgress/inProgressShipmentsView.html
+++ b/app/components/Shipments/inProgress/inProgressShipmentsView.html
@@ -14,6 +14,7 @@
                 <div class="auction-item" ng-repeat="item in inProgressShipments">
                     <detail-shipment shipment-item="{item}"></detail-shipment>
                 </div>
+                <paging item-count="inProgressShipments.length"></paging>
             </div>
         </div>
     </div>
