--- a/css/content.css
+++ b/css/content.css
@@ -11,8 +11,50 @@
     max-width: 1140px;
     margin: 0 auto;
 }
+.no-overflow {
+    overflow: initial!important;
+}
 
 /*auction*/
+.sorting-bar {
+    width: 100%;
+    padding-bottom: 10px;
+    text-align: right;
+}
+.sorting-bar .sorting-label {
+    text-align: center;
+    font-weight: bold;
+    padding-right: 15px;
+}
+.sorting-bar .sorting-button {
+    float: right;
+    background: white;
+    color: #2c2d51;
+    border: 1px solid #e6e6f1;
+}
+
+.sorting-bar .sorting-button span {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sorting-bar .dropdown-menu {
+    width: 230px;
+}
+.sorting-bar .dropdown-divider {
+    width: 100%;
+    height: 1px;
+    background: #e6e6f1;
+}
+.sorting-bar .dropdown-item {
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+.sorting-bar .dropdown-item:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
+
 .clean-line-sm{
     display: none;
 }
@@ -22,9 +64,6 @@
 }
 .auction-list-page{
     margin-bottom: 10px;
-}
-.redArrow {
-    color: #e91d27;
 }
 .auction-list-page .auction-list{
     padding: 0;
