city + street + house_number, refactoring

--- a/app/components/Account/Profile/userProfileView.html
+++ b/app/components/Account/Profile/userProfileView.html
@@ -7,8 +7,8 @@
         <td>{{userInfo.username}}</td>
       </tr>
       <tr>
-        <th>{{'texts.address_state' | i18next}}:</th>
-        <td>{{userInfo.address_state}}</td>
+        <th>{{'texts.address_city' | i18next}}:</th>
+        <td>{{userInfo.address_city}}</td>
       </tr>
       <tr>
         <th>{{'texts.address_street' | i18next}}:</th>
