--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -52,9 +52,8 @@
       required />
     </div>
     <div class="form-group half">
-      <input type="text" name="dic" class="form-control my-input" placeholder="{{'texts.dic' | i18next}}" ng-model="user.dic" 
-      ng-class="{'input-error' : registrationForm.dic.$invalid && (!registrationForm.dic.$pristine || clicked)}" 
-      required />
+      <input type="text" name="dic" class="form-control my-input" placeholder="{{'texts.dic' | i18next}}" ng-model="user.dic"
+      />
     </div>
     <div class="form-group half">
       <input type="text" name="bank_account" class="form-control my-input" placeholder="{{'texts.bank_account' | i18next}}" ng-model="user.bank_account" 
@@ -62,8 +61,8 @@
       required />
     </div>
     <div class="form-group half">
-      <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="user.address_state" 
-      ng-class="{'input-error' : registrationForm.address_state.$invalid && (!registrationForm.address_state.$pristine || clicked)}" 
+      <input type="text" name="address_city" class="form-control my-input" placeholder="{{'texts.address_city' | i18next}}" ng-model="user.address_city"
+      ng-class="{'input-error' : registrationForm.address_city.$invalid && (!registrationForm.address_city.$pristine || clicked)}"
       required />
     </div>
     <div class="form-group half">
