--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -29,8 +29,8 @@
                 required />
       </div>
       <div class="form-group half">
-        <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="employee.address_state"
-               ng-class="{'input-error' : addUserForm.address_state.$invalid && (!addUserForm.address_state.$pristine || clicked)}"
+        <input type="text" name="address_city" class="form-control my-input" placeholder="{{'texts.address_city' | i18next}}" ng-model="employee.address_city"
+               ng-class="{'input-error' : addUserForm.address_city.$invalid && (!addUserForm.address_city.$pristine || clicked)}"
                required />
       </div>
       <div class="form-group half">
