--- a/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
+++ b/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
@@ -6,7 +6,7 @@
                 <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.from' | i18next}}</div>
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.to' | i18next}}</div>
-                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_description' | i18next}}</div>
+                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_type.label' | i18next}}</div>
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.price' | i18next}}</div>
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.end_auction' | i18next}}</div>
                 </div>
