--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -44,7 +44,7 @@
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.from' | i18next}}</span></div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.to' | i18next}}</span></div>
-                <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_description' | i18next}}</span></div>
+                <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_type.label' | i18next}}</span></div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.price' | i18next}}</span></div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">
                     <div>
