update ceny kazdou sekundu a jeji zvýraznění

--- a/css/content.css
+++ b/css/content.css
@@ -83,6 +83,23 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.auction-list-page .auction-list .auction-cell .new-price {
+    -webkit-animation: animateNewPrice 1s 2; /* Safari 4.0 - 8.0 */
+    -webkit-animation-direction: alternate; /* Safari 4.0 - 8.0 */
+    animation: animateNewPrice 1s 2;
+    animation-direction: alternate;
+}
+
+@keyframes animateNewPrice {
+    0%   { font-size: 16px; font-weight: 400; }
+    15%  { font-size: 18px; font-weight: 600; }
+    25%  { font-size: 20px; font-weight: 900; }
+    50%  { font-size: 25px; font-weight: 900; }
+    65%  { font-size: 18px; font-weight: 600; }
+    75%  { font-size: 20px; font-weight: 900; }
+    100% { font-size: 16px; font-weight: 400; }
+}
+
 .auction-list-page .auction-list .auction-cell span{
     white-space: nowrap;
 }
