--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -45,7 +45,7 @@
                required />
       </div>
       <div class="form-group half">
-        <input type="text" name="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="employee.psc"
+        <input type="text" name="psc" id="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="employee.psc"
                ng-class="{'input-error' : addUserForm.psc.$invalid && (!addUserForm.psc.$pristine || clicked)}"
                required />
       </div>
