--- a/app/components/Auction/Create/createAuctionView.html
+++ b/app/components/Auction/Create/createAuctionView.html
@@ -93,6 +93,12 @@
           <option value="1">{{'texts.auction.freight_type.1' | i18next}}</option>
           <option value="2">{{'texts.auction.freight_type.2' | i18next}}</option>
           <option value="3">{{'texts.auction.freight_type.3' | i18next}}</option>
+          <option value="4">{{'texts.auction.freight_type.4' | i18next}}</option>
+          <option value="5">{{'texts.auction.freight_type.5' | i18next}}</option>
+          <option value="6">{{'texts.auction.freight_type.6' | i18next}}</option>
+          <option value="7">{{'texts.auction.freight_type.7' | i18next}}</option>
+          <option value="8">{{'texts.auction.freight_type.8' | i18next}}</option>
+          <option value="9">{{'texts.auction.freight_type.9' | i18next}}</option>
         </select>
       </div>
       <div class="form-group half">
