--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -31,7 +31,7 @@
             </tr>
         </table>
         <div ng-if="!drivers.length" class="text-center text-info">
-            No drivers
+            {{'texts.no_drivers' | i18next}}
         </div>
     </div>
 </m>
