--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -5,6 +5,7 @@
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
+                <th>Email</th>
                 <th>Name</th>
                 <th>Surname</th>
                 <th>Credit</th>
@@ -12,6 +13,7 @@
             </tr>
             <tr class="item" ng-repeat="user in users">
                 <td>{{user.username}}</td>
+                <td>{{user.email}}</td>
                 <td>{{user.name}}</td>
                 <td>{{user.surname}}</td>
                 <td>{{user.credit}}({{user.share}})</td>
