-zobrazeni ceny u shipmentu -stylovani detailu aukce a shipmentu

--- a/app/components/Shipments/finished/finishedShipmentsView.html
+++ b/app/components/Shipments/finished/finishedShipmentsView.html
@@ -7,6 +7,7 @@
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.from' | i18next}}</div>
                     <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.to' | i18next}}</div>
                     <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_type.label' | i18next}}</div>
+                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.price' | i18next}}</div>
                 </div>
             </div>
             <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
