-zpraveni comba u razeni (už neni pod detailem aukce)

--- a/css/content.css
+++ b/css/content.css
@@ -162,6 +162,7 @@
     padding: 10px;
     margin: 15px 0;
     box-shadow: none;
+    z-index: 1;
 }
 .auction-item .auction-detail span{
     padding: 0;
