--- a/app/components/Auction/Create/createAuctionView.html
+++ b/app/components/Auction/Create/createAuctionView.html
@@ -20,6 +20,10 @@
       });
     </script>
     <form name="createAuctionForm" novalidate>
+      <div class="form-group full">
+        <span class="glyphicon glyphicon-info-sign"></span>
+        <span>{{'texts.auction.info' | i18next}}</span>
+      </div>
       <div class="form-group half">
         <input id="geoCompleteFrom" class="form-control my-input" placeholder="{{'texts.auction.from' | i18next}}" ng-model="auction.address_from"
           ng-class="{'input-error' : createAuctionForm.from.$invalid && (!createAuctionForm.from.$pristine || clicked)}"
