--- a/css/form.css
+++ b/css/form.css
@@ -62,6 +62,13 @@
     vertical-align: top;
 }
 
+.form-group.full{
+    display: inline-block;
+    width: 100%;
+    margin: 40px 2% 0 2%;
+    vertical-align: top;
+}
+
 .form-group .input-label{
     position: absolute;
     top: -30px;
