--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -4,10 +4,10 @@
         <h2>{{'texts.drivers' | i18next}}</h2>
         <table ng-if="drivers.length" class="table table-striped table-responsive company-list">
             <tr>
-                <th>Username</th>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Actions</th>
+                <th>{{'texts.username' | i18next}}</th>
+                <th>{{'texts.name' | i18next}}</th>
+                <th>{{'texts.surname' | i18next}}</th>
+                <th>{{'texts.actions' | i18next}}</th>
             </tr>
             <tr class="item" ng-repeat="driver in drivers">
                 <td>{{driver.username}}</td>
