--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -9,6 +9,11 @@
                ng-minlength="8" required />
       </div>
       <div class="form-group half">
+        <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
+               ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
+               required />
+      </div>
+      <div class="form-group half">
         <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
                ng-class="{'input-error' : addUserForm.password.$invalid && (!addUserForm.password.$pristine || clicked)}"
                ng-minlength="8" required />
