--- a/css/content.css
+++ b/css/content.css
@@ -14,6 +14,10 @@
     overflow: initial!important;
 }
 
+.ngdialog.ngdialog-theme-default .ngdialog-content {
+    width: 800px;
+}
+
 /*auction*/
 .sorting-bar {
     width: 100%;
@@ -356,17 +360,6 @@
 
 .photo-buttons .my-button{
     margin-bottom: 15px!important;
-}
-
-.map-section .map-wrap {
-    overflow: hidden;
-    display: none;
-    padding: 0;
-    border: 1px solid #ffffff;
-}
-.map-section .map-wrap .map {
-    height: 300px;
-    width: 100%;
 }
 
 .shipment-photos {
